<resources>
    <string name="app_name">VideoApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_third">ThirdActivity</string>
    <string name="title_activity_splash">Svijest</string>
    <string name="title_activity_fourth">FourthActivity</string>

    <string-array name="subjects">
        <item>Physics</item>
    </string-array>
    <string name="subjects_url">http://alvideobackend.azurewebsites.net/subject</string>
    <string name="lessons_url">http://alvideobackend.azurewebsites.net/lesson/%1$s/</string>
    <string name="experiments_url">http://alvideobackend.azurewebsites.net/experiment/Physics/%1$s/</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="title">Svijest</string>
    <string name="description">An all in one Education Hub for</string>
    <string name="description2">Advanced Level Curriculum</string>

    <string name="presented_by">Presented by Good Shepherd Convent, Kandy</string>
    <string name="copyright">© 2017 Kryptonite</string>

</resources>
