<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/splash_top_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.acer.videoapp.Splash">

    <!--
    <TextView android:text="Splash Screen" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        -->

    <ImageView android:id="@+id/splashscreen"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:scaleType="fitXY"
        android:layout_centerHorizontal="true"
        android:src="@drawable/splash"
    />

    <TextView android:id="@+id/title"
        android:text="@string/title"
        android:textSize="33sp"
        android:textColor="#696969"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/splashscreen"/>

    <TextView android:id="@+id/text"
        android:paddingTop="@dimen/splash_top_margin"
        android:text="@string/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/title"/>

    <TextView android:id="@+id/text1"
        android:text="@string/description2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text"/>

    <TextView android:id="@+id/text2"
        android:paddingTop="@dimen/copyright"
        android:text="@string/presented_by"
        android:textSize="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text1"/>

    <TextView android:id="@+id/text3"
        android:text="@string/copyright"
        android:textSize="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text2"/>

</RelativeLayout>
